src/index.css
/*
DON'T INTRODUCE ADDITIONAL CODE TO THIS FILE
*/
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Inter:wght@400;600;700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

.swiper {
  @apply w-full overflow-hidden rounded-lg;
}

.swiper-slide {
  @apply flex flex-col justify-start w-full;
}

.swiper-slide img {
  @apply block object-cover w-full h-full;
}

.swiper-pagination {
  @apply !relative pb-[9px] mx-7;
}

.swiper-title {
  @apply mb-5 font-bold sm:text-title text-titleMobile;
}

.swiper-pagination-bullet.swiper-pagination-bullet-active {
  @apply !rounded-full !w-[20px] !bg-black-base !h-[2px];
}

.swiper-pagination-bullet {
  @apply !rounded-full !w-[8px] !bg-[#0B0E13] !h-[2px] !mx-1 transition-all duration-200 ease-in-out;
}

.swiper-pagination-horizontal {
  @apply !w-auto !bottom-0 !left-0;
}

.swiper-controls {
  @apply flex items-center mt-5;
}

.offset-header {
  @apply lg:mt-[56px];
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input[type="number"] {
  appearance: textfield;
}

.clip-text {
  -webkit-background-clip: text !important;
  -moz-background-clip: text !important;
  -webkit-text-fill-color: transparent !important;
  -moz-text-fill-color: transparent !important;
}

.qrcode::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: linear-gradient(
    319deg,
    #3dedd7 0%,
    #02cdfe 10%,
    #3781f4 50.52%,
    #7063ff 66.04%,
    #cc5cdc 100%
  );
  mix-blend-mode: lighten;
}

.qrcode canvas {
  margin: auto;
}

ul {
  list-style-type: "— ";
  list-style-position: outside;
  margin-left: 1.2em;
}

.display-table {
  display: table;
}

.display-table-cell {
  display: table-cell;
}

.social-button {
  width: 192px;
  height: 84px;

  border-radius: 6px;
}

.social-button span {
  color: white;
  font-weight: 700;
  font-size: 16px;
  line-height: 24px;
  letter-spacing: 0.01em;
}

.social-button .social-button-wrapper {
  height: 100%;
  margin: auto;
}

.social-button .display-table-cell {
  vertical-align: middle;
}

.social-button img {
  padding-right: 10px;
}

.social-button.discord {
  background: #5865f2;
}

.social-button.discord:hover {
  background: #667eff;
  box-shadow: 0px 2px 10px rgba(88, 101, 242, 0.6);
}

.social-button.twitter {
  background: #1da1f2;
}

.social-button.twitter:hover {
  background: #00c2ff;
  box-shadow: 0px 2px 10px rgba(29, 161, 242, 0.6);
}

.social-button.github {
  background: #0f0c0d;
}

.social-button.github:hover {
  background: #4a4748;
  box-shadow: 0px 2px 10px rgba(15, 12, 13, 0.4);
}

.icon-background-blur {
  z-index: -1;
  position: absolute;
}

.big-background-blur {
  left: -30px;
  top: -22px;
  height: 232px;
  width: 232px;
  opacity: 0.5;
  filter: blur(61.6011px);
  transform: matrix(0, 1, -1, 0, 0, 0);
}

.small-background-blur {
  left: 0px;
  top: -22px;
  height: 143px;
  width: 143px;
  opacity: 0.3;
  filter: blur(21.5604px);
  transform: rotate(-180deg);
}

.private-background-blur.big-background-blur {
  background: radial-gradient(
    50% 50% at 50% 50%,
    #923dff 0%,
    rgba(21, 87, 255, 0) 100%
  );
}

.private-background-blur.small-background-blur {
  background: radial-gradient(
    50% 50% at 50% 50%,
    #df5eff 0%,
    rgba(75, 115, 255, 0.15) 100%
  );
}

.convenient-background-blur.big-background-blur {
  background: radial-gradient(
    50% 50% at 50% 50%,
    #a864ff 0%,
    rgba(255, 21, 204, 0) 100%
  );
}

.convenient-background-blur.small-background-blur {
  background: radial-gradient(
    50% 50% at 50% 50%,
    rgba(255, 211, 98, 0.74) 0%,
    rgba(226, 218, 17, 0) 100%
  );
}

.secure-background-blur.big-background-blur {
  background: radial-gradient(
    50% 50% at 50% 50%,
    #008c95 0%,
    rgba(21, 255, 101, 0) 100%
  );
}

.secure-background-blur.small-background-blur {
  background: radial-gradient(
    50% 50% at 50% 50%,
    #e0ff62 0%,
    rgba(253, 255, 168, 0) 100%
  );
}

.only-with-nfid::before {
  content: "123";
  display: block;
  position: absolute;
  left: -50vw;
  top: 0;
  width: 200vw;
  height: 100%;
  background: #3d3f56;
}

main.landing-page {
  margin-top: -80px;
}

main.landing-page .container {
  margin-top: 80px;
}

@media only screen and (max-width: 820px) {
  .social-button {
    width: 156px;
    height: 60px;
    border-radius: 4.3px;
  }

  .blur-pink {
    max-width: none;
    right: -14em;
  }

  .blur-green {
    height: 200%;
    width: 350%;
    margin-top: -85em;
  }

  .blur-blue.md\:left-\[-85\%\] {
    width: 310%;
  }

  main.landing-page {
    margin-top: -80px;
  }

  /* main.landing-page .container {
    margin-top: 72px;
  } */

  main.landing-page .container .sm\:text-titleLarge {
    font-size: 34px;
    line-height: 44px;
  }

  main.landing-page .container button.btn-large-max {
    width: 100%;
  }

  main.landing-page .container h2.text-lg {
    font-size: 0.9rem;
  }
}

@media only screen and (max-width: 768px) {
  .blur-green {
    height: 120%;
    width: 350%;
    margin-top: -45em;
  }
}

@media only screen and (max-width: 390px) {
  .blur-green {
    margin-top: -20em;
  }
}

@media only screen and (max-width: 375px) {
  .social-button span {
    font-size: 11.6px;
  }

  .social-button img {
    height: 30px;
  }

  .blur-pink {
    max-width: none;
    right: -14em;
  }

  .blur-green {
    margin-top: -10em;
  }

  .blur-blue.md\:left-\[-85\%\] {
    width: 410%;
    top: -65em;
    left: -22em;
  }

  main.landing-page {
    margin-top: -80px;
  }

  main.landing-page .container {
    margin-top: 0;
  }

  main.landing-page .container .mobile.has-account {
    margin-top: 80px;
  }
}

@media only screen and (max-width: 320px) {
  .social-button {
    width: 126px;
    height: 50px;
  }

  .blur-blue {
    top: -25em;
  }
}

